[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "github-bot-api"
version = "0.5.1"
description = "API for creating GitHub bots and webhooks in Python."
authors = ["Niklas Rosenstein <rosensteinniklas@gmail.com>"]
license = "MIT"
readme = "readme.md"
packages = [{ include = "github_bot_api", from = "src" }]
classifiers = []
keywords = []

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/NiklasRosenstein/python-github-bot-api/issues"
Documentation = "https://niklasrosenstein.github.io/python-github-bot-api/"
Homepage = "https://github.com/NiklasRosenstein/python-github-bot-api"
Repository = "https://github.com/NiklasRosenstein/python-github-bot-api"

[tool.poetry.dependencies]
python = "^3.8"
"nr.functional" = "^0.2.0"
cryptography = "^39.0.2"
Deprecated = "^1.2.13"
flask = { version = "*", optional = true }
PyGithub = { version = "*", optional = true }
PyJWT = "^2.6.0"
requests = "^2.28.2"
urllib3 = "^1.26.15"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
isort = "*"
mypy = "*"
pytest = "*"
types-deprecated = "*"
types-flask = "*"
types-requests = "*"

[tool.slap]
typed = true

[tool.slap.test]
check = "slap check"
mypy = "dmypy run src/"
pytest = "pytest -vv"
# black = "black --check src/ tests/"
# isort = "isort --check-only src/ tests/"
# flake8 = "flake8 src/ tests/"

[tool.slap.run]
fmt = "black src/ tests/ && isort src/ tests/"

[tool.mypy]
python_version = "3.8"
explicit_package_bases = true
mypy_path = ["src"]
namespace_packages = true
pretty = true
show_error_codes = true
show_error_context = true
# strict = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true

[tool.isort]
profile = "black"
line_length = 120
combine_as_imports = true

[tool.black]
line-length = 120
